spacing issue with footer image

--- a/index1.css
+++ b/index1.css
@@ -269,6 +269,7 @@ display: flex;}
 
 .footer-contact img {
     width: 20px;
+    height: 20px;
     padding-left: 5px;
     
 }
